# website_src

./: .gitignore  CNAME  CONFIG.md  LICENSE  README.md  SETUP.md  about.html  bio.html  blog.html  convertBib.js  generateAlbums.js  index.html  links.html  package-lock.json  package.json  publications.bib  publications.html  research.html
.github/workflows/: deploy.yml
albums/: albums.meta.json  index.html
assets/css/: style.css
assets/data/: albums.json  albums.meta.json  publications.json
assets/js/: blog.js  components.js  main.js  publications.js
photomanager/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json  vite.config.js
photomanager/src/: App.css  App.jsx  index.css  index.html
photomanager/src-tauri/src/: main.rs
