[package]
name = "photo-manager-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "photo-manager-backend"
path = "src-tauri/src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "protocol-asset", "shell-open", "dialog-open", "fs-all"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.4"
kamadak-exif = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
